--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,7 @@
 REACT_APP_MAP_API_KEY=""
+EACT_APP_API_KEY=""
+REACT_APP_AUTH_DOMAIN="api-project-xxxxxxxxxxx.firebaseapp.com"
+REACT_APP_DATABASE_URL="https://api-project-xxxxxxxxxx.firebaseio.com"
+REACT_APP_PROJECT_ID="api-project-xxxxxxx"
+REACT_APP_STORAGE_BUCKET=""
+REACT_APP_MESSAGING_SENDER_ID=""
